--- a/src/pages/accessories/accessoryDetailPage.css
+++ b/src/pages/accessories/accessoryDetailPage.css
@@ -54,7 +54,7 @@
 
 .product-images {
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   gap: 15px;
   flex-direction: row-reverse;
   
@@ -71,7 +71,7 @@
   gap: 10px;
   flex-direction: column;
   margin-top: 10px;
-  align-items: center;
+  align-items: flex-start;
   
 }
 
@@ -82,6 +82,7 @@
   cursor: pointer;
   transition: transform 0.3s ease;
   border: 1px solid #f7dcd0;
+  
 }
 
 .thumbnail-image:hover {
