--- a/src/pages/navbar/nav.css
+++ b/src/pages/navbar/nav.css
@@ -10,6 +10,11 @@
     z-index: 1000;
 }
 
+.btn {
+    display: flex;
+    gap: 10px; 
+    margin-left: auto;
+}
 
 .navbar-content {
     display: flex;
@@ -18,7 +23,6 @@
     width: 100%;
     margin-right: 170px;
 }
-
 
 .logo {
     height: 90px; 
@@ -37,10 +41,10 @@
 }
 
 .nav-links li a {
-    text-decoration: none;
-    color: wheat;
+    text-decoration: none; 
+    color: wheat; 
     font-size: 16px;
-    transition: color 0.3s;
+    transition: color 0.3s; 
 }
 
 .nav-links li a:hover {
@@ -48,14 +52,7 @@
 }
 
 
-.btn {
-    display: flex;
-    gap: 10px;
-    margin-left: auto; 
-}
-
-
-.user, .ShoppingCart {
+.user, .ShoppingCart, .FaHeart {
     background-color: black;
     color: white;
     border-radius: 50%;
@@ -69,36 +66,19 @@
     transition: background-color 0.3s, transform 0.3s;
 }
 
-.user:hover, .ShoppingCart:hover {
+
+.user:hover, .ShoppingCart:hover, .FaHeart:hover {
     background-color: #f39c12;
     transform: scale(1.1);
 }
 
 
-
-.cart-dropdown {
-    position: absolute;
-    top: 100px;
-    right: 90px;
-    background-color: white;
-    border: 1px solid #ccc;
-    padding: 20px;
-    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-    width: 200px;
-    display: none; 
-    
+.FaHeart a, .ShoppingCart a, .user a {
+    color: inherit; 
+    text-decoration: none; 
 }
 
-.cart-order {
-    color: black;
-    text-align: center;
-    font-size: 10;
-}
 
-.cart-dropdown.show {
-    display: block; 
-    
-}
 
 .cart-item {
     display: flex;
@@ -129,155 +109,30 @@
     color: darkred;
 }
 
-
-/* CSS за инфо бара */
+/* Информация в info-bar */
 .info-bar {
-    background-color: black; 
+    background-color: black;
     color: wheat;
     padding: 10px 0;
     text-align: center;
-    overflow: hidden; 
+    overflow: hidden;
     position: relative;
     width: 50%;
 }
 
 .info-text {
     display: flex;
-    white-space: nowrap; 
-    animation: scroll 10s linear infinite; 
+    white-space: nowrap;
+    animation: scroll 10s linear infinite;
     font-size: 16px;
     font-weight: bold;
 }
 
-.FaHeart{
-    background-color: black;
-    color: white;
-    border-radius: 50%;
-    border: 1px solid #f39c12;
-    padding: 12px;
-    font-size: 14px;
-    cursor: pointer;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    transition: background-color 0.3s, transform 0.3s;
-}
-
-.FaHeart a {
-    color: inherit; 
-    text-decoration: none; 
-}
-
-.FaHeart:hover{
-    background-color: #f39c12;
-    transform: scale(1.1);
-}
-
-.profile-section {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-}
-
-.profile-header {
-    font-weight: bold;
-    margin-bottom: 5px;
-    font-size: 10px;
-}
-
-.greeting,
-.username {
-    margin: 0;
-    font-size: 10px;
-    color: white;
-}
-
-.chevron-down {
-    font-size: 12px;
-    margin-left: 3px;
-   
-}
-
-.profile-section {
-    position: relative;
-    display: inline-block;
-    cursor: pointer;
-}
-
-.profile-header {
-    display: flex;
-    align-items: center;
-    font-size: 12px;
-    color: #fdfdfd;
-}
-
-.dropdown-menu {
-    position: absolute;
-    top: 100%; 
-    left: auto; 
-    right: 0; 
-    background-color: white;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    padding: 0;
-    list-style: none;
-    width: 200px; 
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
-    z-index: 1000;
-    margin-top: 5px;
-    
-}
-
-.dropdown-menu li {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-}
-
-.dropdown-menu li a {
-    text-decoration: none;
-    color: black;
-    font-size: 12px;
-    display: block;
-    padding: 10px;
-    text-align: left;
-}
-
-.dropdown-menu li:first-child a {
-    
-    color: black;
-    
-}
-
-.dropdown-menu li:hover a,
-.logout-btn:hover {
-    background-color: orange;
-    color: white;
-}
-
-.dropdown-menu ul {
-    padding: 0;
-    
-}
-
-
-
-.logout-btn {
-    background-color: transparent;
-    border: none;
-    color: black;
-    cursor: pointer;
-    font-size: 12px;
-    text-align: left;
-    padding: 10px;
-    width: 100%;
-}
-
 @keyframes scroll {
     from {
-        transform: translateX(80%); 
+        transform: translateX(80%);
     }
     to {
-        transform: translateX(-80%); 
+        transform: translateX(-80%);
     }
 }
