--- a/src/pages/Order/order.css
+++ b/src/pages/Order/order.css
@@ -3,7 +3,6 @@
   max-width: 600px;
   margin: 0 auto;
   padding: 20px;
-  background-color: #f9f9f9;
   border-radius: 8px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
@@ -47,15 +46,17 @@ textarea {
 }
 
 .input-group {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  display: flex;
+  flex-wrap: wrap;
   gap: 15px;
-  align-items: start;
+  justify-content: space-between;
 }
 
-.input-group .input-wrapper {
+.input-wrapper {
+  flex: 1;
   display: flex;
   flex-direction: column;
+  min-width: 45%; 
 }
 
 
@@ -68,7 +69,6 @@ textarea {
 .delivery-options button {
   padding: 10px 15px;
   border: none;
-  background-color: #ddd;
   cursor: pointer;
   border-radius: 4px;
   transition: background 0.3s ease;
@@ -94,4 +94,16 @@ textarea {
 
 .confirm-btn:hover {
   background-color: #218838;
+}
+
+h1, h2 {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 5px; 
+  color: f39c12;
+}
+
+h1 svg, h2 svg {
+  font-size: 1.2em; 
 }
