--- a/src/pages/Order/order.css
+++ b/src/pages/Order/order.css
@@ -107,3 +107,19 @@ h1, h2 {
 h1 svg, h2 svg {
   font-size: 1.2em; 
 }
+
+.invoice-checkbox {
+  display: flex;
+  align-items: center;
+  gap: 8px; 
+  white-space: nowrap;
+
+  
+}
+
+input[type="checkbox"] {
+  width: 16px; 
+  height: 16px;
+ margin-bottom: 10px;
+ 
+}
