fix title color for brand and last product

--- a/src/pages/lastproduct/lastproduct.css
+++ b/src/pages/lastproduct/lastproduct.css
@@ -93,6 +93,10 @@
     opacity: 0.9;
 }
 
+.title-last-product{
+    color: black;
+}
+
 @media (min-width: 1200px) {
     .products-grid {
         grid-template-columns: repeat(5, 1fr); 
