--- a/src/pages/Order/order.css
+++ b/src/pages/Order/order.css
@@ -154,3 +154,22 @@ input[type="checkbox"] {
   margin-left: 6px; 
   text-align: left; 
 }
+
+.cart-item {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  margin-bottom: 10px;
+}
+
+.cart-item-image {
+  width: 50px;
+  height: 50px;
+  object-fit: cover;
+  border-radius: 5px;
+}
+
+.cart-item-details {
+  display: flex;
+  flex-direction: column;
+}
