Need to add btn for remove item

--- a/src/pages/Order/order.css
+++ b/src/pages/Order/order.css
@@ -173,3 +173,9 @@ input[type="checkbox"] {
   display: flex;
   flex-direction: column;
 }
+
+/* .shipping-note {
+  font-size: 0.6rem;
+  color: #888;
+  margin-top: 5px;
+} */
