--- a/src/pages/adminOrder/adminOrder.css
+++ b/src/pages/adminOrder/adminOrder.css
@@ -1,9 +1,9 @@
-
 .admin-orders-container {
+    max-width: 800px; /* Ограничава ширината */
+    margin: 20px auto; /* Центрира съдържанието */
     padding: 20px;
     font-family: Arial, sans-serif;
 }
-
 
 .admin-orders-title {
     font-size: 24px;
@@ -12,42 +12,79 @@
     text-align: center;
 }
 
-
 .no-orders-message {
     font-size: 18px;
     color: #666;
     text-align: center;
 }
 
-
 .orders-list {
     list-style-type: none;
     padding: 0;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
 }
 
 .order-item {
-    background-color: #f9f9f9;
+    background-color: #ffffff;
     border: 1px solid #ddd;
     border-radius: 8px;
-    padding: 15px;
-    margin: 10px 0;
-    transition: background-color 0.3s ease;
+    padding: 12px;
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    transition: transform 0.2s ease, box-shadow 0.2s ease;
 }
 
 .order-item:hover {
-    background-color: #eaeaea;
+    transform: scale(1.02);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.15);
 }
-
 
 .order-id,
 .customer-name,
+.customer-phone,
 .order-status {
-    margin: 5px 0;
-    font-size: 16px;
+    font-size: 14px;
+    margin: 2px 0;
 }
-
 
 .order-status {
     font-weight: bold;
-    color: #ff6347; /* Може да се променя в зависимост от статуса */
+    color: #ff6347;
+}
+
+.status-button {
+    background-color: #4CAF50;
+    color: white;
+    border: none;
+    padding: 8px 12px;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.2s ease;
+    align-self: flex-start;
+}
+
+.status-button:hover {
+    background-color: #45a049;
+}
+
+.details-button {
+    background-color: #786ff8;
+    color: white;
+    border: none;
+    padding: 8px 12px;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.2s ease;
+    align-self: flex-start;
+    
+}
+
+.button-group {
+    display: flex;
+    gap: 15px; 
+    margin-top: 10px;
 }
