--- a/src/pages/adminOrder/adminOrder.css
+++ b/src/pages/adminOrder/adminOrder.css
@@ -71,7 +71,7 @@
     background-color: #45a049;
 }
 
-.details-button {
+.view-button {
     background-color: #786ff8;
     color: white;
     border: none;
@@ -83,7 +83,7 @@
     
 }
 
-.button-group {
+.order-buttons {
     display: flex;
     gap: 15px; 
     margin-top: 10px;
