--- a/src/pages/adminOrder/adminOrder.css
+++ b/src/pages/adminOrder/adminOrder.css
@@ -88,3 +88,17 @@
     gap: 15px; 
     margin-top: 10px;
 }
+
+.delete-button {
+    background-color: red;
+    color: white;
+    border: none;
+    padding: 8px 12px;
+    cursor: pointer;
+    margin-left: 10px;
+    border-radius: 5px;
+}
+
+.delete-button:hover {
+    background-color: darkred;
+}
