--- a/src/pages/orderDetails/orderDetails.css
+++ b/src/pages/orderDetails/orderDetails.css
@@ -40,3 +40,17 @@ h2, h3 {
     object-fit: cover;
     border-radius: 5px;
 }
+
+.cart-item {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    margin-bottom: 10px;
+}
+
+.product-image {
+    width: 50px;
+    height: 50px;
+    object-fit: cover;
+    border-radius: 5px;
+}
