--- a/src/Card/product.css
+++ b/src/Card/product.css
@@ -64,15 +64,15 @@
 
 .details-btn1 {
     border-radius: 5px;
-    border: solid #f39c12;
+    border: solid #fafafa;
     color: rgb(255, 255, 255);
     font-weight: bold;
     
 }
 
-.add-to-cart-btn {
-    background-color: #f39c12;
-    color:black;
+.add-to-cart-btn1 {
+    background-color: #786ff8;
+    color:white;
     font-weight: bold;
     border-radius: 5px;
     margin: 5px;
