--- a/src/pages/addAccessory/addaccessory.css
+++ b/src/pages/addAccessory/addaccessory.css
@@ -10,7 +10,7 @@ input, select, textarea {
     border: 1px solid #ccc;
 }
 
-button {
+.accbtn {
     background-color: #4CAF50;
     color: white;
     padding: 10px;
@@ -18,7 +18,7 @@ button {
     cursor: pointer;
 }
 
-button:hover {
+.accbtn:hover {
     background-color: #45a049;
 }
 
