Need to fix css for change password

--- a/src/pages/changePassword/changepassword.css
+++ b/src/pages/changePassword/changepassword.css
@@ -30,18 +30,35 @@
   flex-direction: column;
   gap: 15px;
   padding-left: 80px;
-  max-width: 500px;
+  max-width: 600px;
 }
 
-.password-form label {
+.field-row {
+  display: flex;
+  align-items: center;
+  margin-bottom: 10px;
+}
+
+.field-row label {
+  width: 180px; /* фиксирана ширина за подравняване */
   font-weight: bold;
+  display: flex;
+  align-items: center;
+  font-size: 15px;
 }
 
-.password-form input {
+.required {
+  color: red;
+  margin-right: 5px;
+  font-size: 16px;
+}
+
+.field-row input {
+  flex: 1;
   padding: 10px;
   border-radius: 5px;
   border: 1px solid #aaa;
-  width: 100%;
+  font-size: 15px;
 }
 
 .buttons-row {
