--- a/src/pages/changePassword/changepassword.css
+++ b/src/pages/changePassword/changepassword.css
@@ -5,8 +5,6 @@
 }
 
 .profile-header-section {
-  display: flex;
-  align-items: center;
   padding-top: 80px;
   width: 97%;
   margin-left: auto;
@@ -25,27 +23,28 @@
   margin-left: auto;
 }
 
+
+
 .password-form {
   display: flex;
   flex-direction: column;
-  gap: 15px;
-  padding-left: 80px;
-  max-width: 600px;
-  margin-left: 20px;
+  gap: 20px;
+  max-width: 500px;
+  margin: 0 auto;
+  margin-left: 100px;
 }
+
+
 
 .field-row {
   display: flex;
-  align-items: center;
-  margin-bottom: 10px;
+  flex-direction: column;
 }
 
 .field-row label {
-  width: 180px; /* фиксирана ширина за подравняване */
   font-weight: bold;
-  display: flex;
-  align-items: center;
   font-size: 15px;
+  margin-bottom: 5px;
 }
 
 .required {
@@ -55,21 +54,22 @@
 }
 
 .field-row input {
-  flex: 1;
   padding: 10px;
   border-radius: 5px;
   border: 1px solid #aaa;
   font-size: 15px;
 }
 
+
+
 .buttons-row {
   display: flex;
+  justify-content: flex-start;
   gap: 15px;
   margin-top: 20px;
 }
 
-.back-button,
-.save-password-button {
+.back-button {
   background-color: #f39c12;
   border: none;
   padding: 10px 20px;
@@ -83,4 +83,15 @@
 .back-button:hover,
 .save-password-button:hover {
   background-color: #d35400;
+}
+
+.save-password-button {
+  background-color: #653cf9;
+  border: none;
+  padding: 10px 20px;
+  color: white;
+  font-size: 16px;
+  cursor: pointer;
+  border-radius: 5px;
+  transition: background-color 0.3s ease
 }
