--- a/src/pages/lastproduct/lastproduct.css
+++ b/src/pages/lastproduct/lastproduct.css
@@ -97,6 +97,33 @@
     color: black;
 }
 
+.slider-controls {
+    display: flex;
+    justify-content: center;
+    gap: 1rem;
+    margin-top: 20px;
+    margin-right: 180px;
+}
+
+.slider-controls button {
+    padding: 0.5rem 1rem;
+    font-size: 1.2rem;
+    background-color: #f0f0f0;
+    border: none;
+    cursor: pointer;
+    border-radius: 5px;
+    transition: 0.3s ease;
+}
+
+.slider-controls button:hover {
+    background-color: #ddd;
+}
+
+.slider-controls button:disabled {
+    opacity: 0.5;
+    cursor: not-allowed;
+}
+
 @media (min-width: 1200px) {
     .products-grid {
         grid-template-columns: repeat(5, 1fr); 
