--- a/src/pages/ProductResults/productresults.css
+++ b/src/pages/ProductResults/productresults.css
@@ -1,27 +1,35 @@
+
 .product-results-container {
-  margin: 20px;
-  text-align: center;
+    padding: 20px;
+    background-color: #f9f9f9; 
 }
 
-.product-results {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 20px;
+
+.title-parts-search {
+    font-size: 24px;
+    font-weight: bold;
+    color: #000000;
+    margin-bottom: 10px;
+    margin-left: 170px;
 }
 
-.product-results h2 {
-  font-size: 24px;
-  margin-bottom: 20px;
-}
-
-.product-results p {
-  font-size: 18px;
-  color: gray;
-}
 
 .divider-parts3 {
-  height: 2px;
-  background-color: #f39c12;
-  margin-bottom: 20px;
-  margin-right: 100px;
+    height: 2px;
+    background-color: #f39c12;
+    margin-bottom: 20px; 
+    margin-left: 173px;
+    width: 80%;
+}
+
+
+.product-results {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr)); 
+    gap: 20px;
+    
+}
+
+.product-results, p {
+    margin-left: 90px;
 }
