--- a/src/pages/Cart/cart.css
+++ b/src/pages/Cart/cart.css
@@ -10,15 +10,23 @@
     align-items: center;
     margin-bottom: 5px;
     padding-top: 80px;
-    width: 97%;
+    width: 98%;
     margin-left: auto;
+    
 }
+
+.cart-title {
+    color: black;
+    font-size: 24px;
+}
+
+
 
 .divider-cart {
     height: 2px;
     background-color: #f39c12;
     margin-bottom: 20px;
-    width: 97%;
+    width: 98%;
     margin-left: auto;
 }
 
