--- a/src/pages/brandDetails/brandDetails.css
+++ b/src/pages/brandDetails/brandDetails.css
@@ -57,7 +57,7 @@
     margin-bottom: 10px;
 }
 
-.model-name {
+.model-name2 {
     font-size: 1.1rem;
     color: #000000;
     position: relative;
@@ -66,7 +66,7 @@
    
 }
 
-.model-name::after {
+.model-name2::after {
     content: "";
     position: absolute;
     left: 50%;
