--- a/src/pages/navbar/nav.css
+++ b/src/pages/navbar/nav.css
@@ -55,7 +55,21 @@
 }
 
 
-.user, .ShoppingCart {
+.user {
+    background-color: black;
+    color: white;
+    border-radius: 50%;
+    border: 1px solid #f39c12;
+    padding: 12px;
+    font-size: 14px;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: background-color 0.3s, transform 0.3s;
+}
+
+.ShoppingCart {
     background-color: black;
     color: white;
     border-radius: 50%;
