--- a/src/pages/navbar/nav.css
+++ b/src/pages/navbar/nav.css
@@ -69,9 +69,9 @@
     transition: background-color 0.3s, transform 0.3s;
 }
 
-.ShoppingCart {
+.ShoppingCart2 {
     background-color: black;
-    color: white;
+    color: rgb(248, 248, 248);
     border-radius: 50%;
     border: 1px solid #f39c12;
     padding: 12px;
@@ -82,6 +82,12 @@
     justify-content: center;
     transition: background-color 0.3s, transform 0.3s;
 }
+
+.cart2{
+    color: white;
+}
+
+
 
 .user:hover, .ShoppingCart:hover {
     background-color: #f39c12;
