need to do login with google and facebook

--- a/src/pages/partsSearch/PartsSearch.css
+++ b/src/pages/partsSearch/PartsSearch.css
@@ -12,11 +12,13 @@
     margin-right: 200px;
 }
 
-.title-parts-search {
+.title-parts-search2 {
     font-size: 24px;
     font-weight: bold;
     color: black;
     white-space: nowrap;
+    
+    
 }
 
 .divider-parts {
