--- a/src/pages/brandDetails/brandDetails.css
+++ b/src/pages/brandDetails/brandDetails.css
@@ -66,24 +66,16 @@
    
 }
 
-.model-name2::after {
-    content: "";
-    position: absolute;
-    left: 50%;
-    bottom: -3px;
-    width: 0;
-    height: 2px;
-    background-color: red;
-    transition: width 0.3s ease, left 0.3s ease;
-    
-}
 
-.model-card:hover .model-name::after {
-    width: 100%;
-    left: 0;
-}
 
-.model-name  {
+
+
+
+
+.model-link {
     text-decoration: none;
-    color: inherit; 
+    color: inherit;
 }
+
+
+
