--- a/src/pages/adminMessages/adminMessages.css
+++ b/src/pages/adminMessages/adminMessages.css
@@ -2,6 +2,10 @@
     padding: 2rem;
 }
 
+.msg-recived {
+    color: black;
+}
+
 .message-list {
     list-style: none;
     padding: 0;
@@ -13,7 +17,8 @@
     padding: 1rem;
     margin-bottom: 1rem;
     box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-    
+    margin-left: 200px;
+    margin-right: 200px;
 }
 
 .date {
