need to fix and fix css

--- a/src/pages/brandDetails/yearDetails.css
+++ b/src/pages/brandDetails/yearDetails.css
@@ -57,6 +57,10 @@
     text-decoration: none; 
 }
 
+.year-name2 {
+    text-decoration: none;
+}
+
 .year-name::after {
     content: "";
     position: absolute;
