--- a/src/pages/brandDetails/modelDetails.css
+++ b/src/pages/brandDetails/modelDetails.css
@@ -16,10 +16,11 @@
     margin-bottom: 25px;
 }
 
-.title-underline {
+.title-underline2 {
     width: 100%;
     height: 2px;
     background-color: #f39c12;
+    width: 102%;
 }
 
 .model-grid2 {
