--- a/src/pages/brandDetails/partsByYear.css
+++ b/src/pages/brandDetails/partsByYear.css
@@ -2,13 +2,6 @@
     padding: 20px;
 }
 
-.title-underline {
-    width: 100px;
-    height: 3px;
-    background-color: black;
-    margin: 10px 0 20px;
-}
-
 .parts-grid {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
@@ -34,4 +27,15 @@
 .part-price {
     font-weight: bold;
     color: #1a8917;
+}
+
+.brand-title5 {
+    font-size: 24px;
+    color:black;
+    font-weight: bold;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 25px;
+    margin-left: 175px;
 }
