done whit some css

--- a/src/pages/accessories/accessoryDetails.css
+++ b/src/pages/accessories/accessoryDetails.css
@@ -42,7 +42,7 @@
   box-shadow: 0 6px 8px rgba(0, 0, 0, 0.15);
 }
 
-.accessory-card img {
+.part-image2 {
   width: 150px;
   height: 150px;
   object-fit: cover;
