need to fix addPart

--- a/src/pages/adminOrder/adminOrder.css
+++ b/src/pages/adminOrder/adminOrder.css
@@ -91,7 +91,7 @@
     margin-top: 10px;
 }
 
-.delete-button {
+.delete-button2 {
   background-color: #28a745;
   color: white;
   font-size: 13px;
