just creating new components

--- a/src/pages/navbar/nav.css
+++ b/src/pages/navbar/nav.css
@@ -314,6 +314,18 @@
     user-select: none;
 }
 
+.heart-badge {
+    position: absolute;
+    top: -5px;
+    right: -5px;
+    background-color: red;
+    color: white;
+    border-radius: 50%;
+    padding: 2px 6px;
+    font-size: 12px;
+    font-weight: bold;
+}
+
 @keyframes scroll {
     from {
         transform: translateX(80%); 
