--- a/src/pages/accessories/accessoryDetailPage.css
+++ b/src/pages/accessories/accessoryDetailPage.css
@@ -163,3 +163,10 @@
   background-color: #38a169;
 }
 
+.error-message2 {
+  text-align: center;
+  margin-top: 50px; 
+  font-size: 18px;
+  color: red; 
+}
+
