--- a/src/Card/brand.css
+++ b/src/Card/brand.css
@@ -17,6 +17,7 @@
     padding: 10px;
     margin: 0 20px;
     position: relative;
+    box-shadow: 0 4px 10px rgba(0,0,0,0.3);
 }
 
 .brand-name:hover  {
